Migrate to JDK 21
Fix FakeDns

Co-authored-by: Viacheslav <xrw.null@gmail.com>